# HypercubeESN

./: .gitignore  CMakeLists.txt  ESN.cpp  ESN.h  LICENSE  README.md  Readout.cpp  Readout.h  Reservoir.cpp  Reservoir.h  main.cpp
.github/workflows/: wheels.yml
cmake/: HypercubeESNConfig.cmake.in
docs/: CPP_SDK.md  Python_SDK.md  README.md  Readout.md  Reservoir.md
examples/: BasicPrediction.cpp  BasicPrediction.md  README.md  SignalClassification.cpp  SignalClassification.md  StreamingAnomaly.cpp  StreamingAnomaly.md
examples/MemoryCapacity/: MCLinalg.h  MemoryCapacity.cpp  MemoryCapacity.h  MemoryCapacity.md
examples/NARMA/: NARMA.cpp  NARMA.md  NARMA10_DIM10_Raw.txt  NARMA10_DIM12_Raw.txt  NARMA20_DIM10_Raw.txt  NARMA20_DIM12_Raw.txt  NARMA30_DIM10_Raw.txt  NARMA30_DIM12_Raw.txt  NARMA_N.h
examples/StreamingText/: CharEmbedding.cpp  CharEmbedding.h  Config.h  Corpus.cpp  Corpus.h  StreamingText.md  main.cpp
python/: CMakeLists.txt  README.md  bindings.cpp  pyproject.toml
python/hypercube_esn/: __init__.py
python/tests/: test_basic.py
